--- a/WatchHistory/WatchHistory/WatchHistory.csproj
+++ b/WatchHistory/WatchHistory/WatchHistory.csproj
@@ -56,6 +56,8 @@
     <Compile Include="Implementations\SortColumn.cs" />
     <Compile Include="Implementations\ViewModelHelper.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="Main\Implementations\EpisodeTitleProcessor.cs" />
+    <Compile Include="Main\Implementations\EpisodeTitle.cs" />
     <Compile Include="Main\Implementations\CollectionProcessor.cs" />
     <Compile Include="Settings\Implementations\SettingsListBoxItemViewModel.cs" />
     <Compile Include="SelectUser\ISelectUserViewModel.cs" />
