--- a/CleanUpHistory/CleanUpHistory.csproj
+++ b/CleanUpHistory/CleanUpHistory.csproj
@@ -39,6 +39,9 @@
     <Compile Include="..\WatchHistory\WatchHistory\Environment.cs">
       <Link>Environment.cs</Link>
     </Compile>
+    <Compile Include="..\WatchHistory\WatchHistory\Implementations\SerializerHelper.cs">
+      <Link>Implementations\SerializerHelper.cs</Link>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
