--- a/WatchHistory/WatchHistory/packages.config
+++ b/WatchHistory/WatchHistory/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Extended.Wpf.Toolkit" version="3.3.0" targetFramework="net452" />
+  <package id="Extended.Wpf.Toolkit" version="3.4.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net452" />
   <package id="NReco.VideoInfo" version="1.1.1" targetFramework="net452" />
 </packages>
